--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
     <main>
         <nav>
             <ul class="mainindex">
-                <a href="pages/Perfil.html">
+                <a href="./pages/perfil.html">
                     <li class="itemperfil">Perfil</li>
                 </a>
 
-                <a href="pages/Estudios.html">
+                <a href="./pages/estudios.html">
                     <li class="itemestudios">Estudios</li>
                 </a>
 
-                <a href="pages/Experiencias.html">                  
+                <a href="./pages/experiencias.html">                  
                     <li class="itemexperiencia">Experiencia</li>
                 </a>
                 
-                <a href="pages/contacto.html">
+                <a href="./pages/contacto.html">
                     <li class="itemcontacto">Contacto</li>              
                 </a>
 
