--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -16,23 +16,23 @@
 
         <nav>
             <ul>
-                <a href="../Index.html">
+                <a href="../index.html">
                     <li>Menu</li>
                 </a>
 
-                <a href="../pages/Perfil.html">
+                <a href="./perfil.html">
                     <li>Perfil</li>
                 </a>
 
-                <a href="Estudios.html">
+                <a href="./estudios.html">
                     <li>Estudios</li>
                 </a>
 
-                <a href="Experiencias.html">                  
+                <a href="./experiencias.html">                  
                     <li>Experiencia</li>
                 </a>
                 
-                <a href="Contacto.html">
+                <a href="./contacto.html">
                     <li>Contacto</li>              
                 </a>
 
